# ticket-evaluator

./: .env.example  .gitignore  README.md  pyproject.toml  tickets_evaluated.csv
src/ticket_evaluator/: __init__.py  config.py  csv_handler.py  evaluator.py  exceptions.py  main.py  models.py  prompt.py
tests/: conftest.py  test_csv_handler.py  test_evaluator.py  test_integration.py  test_models.py  test_prompt.py
