[project]
name = "ticket-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Juan Jose Lopez Martinez", email = "jotacib3@gmail.com" }]
requires-python = ">=3.13"

dependencies = [
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[project.scripts]
ticket-evaluator = "ticket_evaluator.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
